[global]
quiet=1

[sdist]
formats=zip,tar

[bdist_wheel]
universal=1

[metadata]
name = graphite-submit-mod
version = 0.0.1
author = Eric Johnfelt
author_email = ejohnfel@hotmail.com
description = Super simple module and cmd line tool for submitting metrics to a graphite instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejohnfel/graphite_submit
project_urls =
    Bug Tracker = https://github.com/ejohnfel/graphite_submit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
#packages = find:
py_modules = gsubmit
python_requires = >=3.0
# Either a single item or each item on a line or each item seperated by semi-colons
intall_requires=

[options.packages.find]
where = src
